--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "turbinesolutionswebsite",
   "version": "1.0.0",
   "description": "Static website for Turbine Solutions. Currently redesigning to be more informative and use modern web style.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
